WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183926
[GTK] Unresolved type warnings when generating gir
https://bugs.webkit.org/show_bug.cgi?id=183926
Summary
[GTK] Unresolved type warnings when generating gir
Michael Catanzaro
Reported
2018-03-22 18:05:14 PDT
[1279/1387] Generating ../../WebKit2-4.0.gir Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:89: Warning: WebKit2: webkit_javascript_result_get_global_context: return value: Unresolved type: u'JSGlobalContextRef' Source/WebKit/UIProcess/API/glib/WebKitJavascriptResult.cpp:106: Warning: WebKit2: webkit_javascript_result_get_value: return value: Unresolved type: u'JSValueRef' Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:3258: Warning: WebKit2: webkit_web_view_get_javascript_global_context: return value: Unresolved type: u'JSGlobalContextRef' [1298/1387] Generating ../../WebKit2WebExtension-4.0.gir Source/WebKit/WebProcess/InjectedBundle/API/glib/WebKitFrame.cpp:102: Warning: WebKit2WebExtension: webkit_frame_get_javascript_global_context: return value: Unresolved type: u'JSGlobalContextRef' Source/WebKit/WebProcess/InjectedBundle/API/glib/WebKitFrame.cpp:122: Warning: WebKit2WebExtension: webkit_frame_get_javascript_context_for_script_world: return value: Unresolved type: u'JSGlobalContextRef'
Attachments
Patch
(3.21 KB, patch)
2018-03-23 01:23 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-03-23 01:23:16 PDT
Created
attachment 336358
[details]
Patch
EWS Watchlist
Comment 2
2018-03-23 01:24:47 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2018-03-25 23:49:03 PDT
Committed
r229970
: <
https://trac.webkit.org/changeset/229970
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug