[GTK] Unresolved type warnings when generating gir https://bugs.webkit.org/show_bug.cgi?id=183926

Reviewed by Michael Catanzaro.

Skip deprecated functions using JSC C API from introspection.

* UIProcess/API/glib/WebKitJavascriptResult.cpp:
* UIProcess/API/glib/WebKitWebView.cpp:
* WebProcess/InjectedBundle/API/glib/WebKitFrame.cpp:

Canonical link: https://commits.webkit.org/199602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229970 268f45cc-cd09-0410-ab3c-d52691b4dbfc